          
        + added ability to configure several aspects of the info panel. Fonts and colors for
          various fields can now be changed. Also, you can set up the background color for the
          fields and their frame style.
          Requires the font service plugin.
          Frame style can be set on the "Tabs and layout" option page.
          
Version 0.9.9.95 - 2005/06/28

        * container icon and title is now set earlier so that the container does not
          show "Dialog" while tabs are created.
          
        * fixed rtf parser to deal with some (rare) rich edit bugs.
        
        * changed tab layouting for single AND multiline BUTTON tabs. Both modes are
          now using fixed width tabs and the layouting code will try to always "fill"
          the rows. An option to set the default fixed tab width has been added 
          to the tab appearance configuration dialog.
          
        + new feature for event notifications (popups only):
        
          tabSRMM can now remove popups for a contact under the following situations:
          
          1) container receives focus
          2) you start typing a reply
          3) you send a reply
          
          The feature can be configured on the Options->Event Notifications page (in the
          listbox with all the checkboxes inside - at the very end of the list).
          
          Whenever one of these options is checked, tabSRMM will remove ALL popups for the
          contact when one of the above conditions is true. Note that you can combine them,
          but that doesn't make much sense. 1) (focus) always happens before any other event.
          
          The feature is pretty useful if you have multiple popups from a single contact on
          screen.
          
        - removed status bar message "keyboard layout saved". No longer needed, because
          the keyboard layout is now always visible as 2-digit code in the 2nd status bar